[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/scenes/fourth_scene.jpg" type="Texture" id=1]
[ext_resource path="res://sources/script/SpritesHitbox.gd" type="Script" id=2]
[ext_resource path="res://assets/bowl_state_one.png" type="Texture" id=3]
[ext_resource path="res://assets/bowl_state_two.png" type="Texture" id=4]
[ext_resource path="res://assets/bowl_state_three.png" type="Texture" id=5]
[ext_resource path="res://sources/scenes/CrushingInstruction.gd" type="Script" id=6]
[ext_resource path="res://assets/scenes/fifth_scene_instructions.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "CrushingAnimation"
tracks/0/type = "value"
tracks/0/path = NodePath("SceneInstrucion/SceneInstructionSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "PeelingAnimation"
tracks/0/type = "value"
tracks/0/path = NodePath("SceneInstrucion/SceneInstructionSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SceneInstrucion/SceneInstructionSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="CrushingGame" type="Node2D"]

[node name="Background" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Background"]
texture = ExtResource( 1 )
centered = false

[node name="Bowl" type="Node2D" parent="."]

[node name="Sprites" type="Node2D" parent="Bowl"]
position = Vector2( 960, 540 )
scale = Vector2( 2, 2 )

[node name="BowlStateOne" type="Sprite" parent="Bowl/Sprites"]
texture = ExtResource( 3 )

[node name="BowlStateTwo" type="Sprite" parent="Bowl/Sprites"]
texture = ExtResource( 4 )

[node name="BowlStateThree" type="Sprite" parent="Bowl/Sprites"]
texture = ExtResource( 5 )

[node name="SpritesHitbox" type="Area2D" parent="Bowl"]
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bowl/SpritesHitbox"]
polygon = PoolVector2Array( 657, 370, 651, 394, 651, 483, 657, 522, 673, 565, 705, 618, 738, 653, 773, 676, 808, 688, 838, 695, 842, 751, 853, 760, 1051, 759, 1101, 754, 1107, 744, 1100, 704, 1155, 688, 1198, 657, 1224, 635, 1249, 607, 1272, 556, 1287, 477, 1291, 382, 1278, 369, 1198, 352, 1059, 339, 861, 329, 751, 341, 678, 358 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CrushingAnimation = SubResource( 1 )
anims/PeelingAnimation = SubResource( 2 )
anims/RESET = SubResource( 3 )
script = ExtResource( 6 )

[node name="SceneInstrucion" type="Node2D" parent="."]
z_index = 2

[node name="SceneInstructionSprite" type="Sprite" parent="SceneInstrucion"]
position = Vector2( 960, 540 )
z_index = 3
texture = ExtResource( 7 )
[connection signal="input_event" from="Bowl/SpritesHitbox" to="Bowl/SpritesHitbox" method="_on_SpritesHitbox_input_event"]
[connection signal="mouse_entered" from="Bowl/SpritesHitbox" to="Bowl/SpritesHitbox" method="_on_SpritesHitbox_mouse_entered"]
[connection signal="mouse_exited" from="Bowl/SpritesHitbox" to="Bowl/SpritesHitbox" method="_on_SpritesHitbox_mouse_exited"]
